--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,11 @@ p25-hackaton = "p25_hackaton.main:main"
 [build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "coverage>=7.13.2",
+    "mypy>=1.19.1",
+    "pytest>=9.0.2",
+    "ruff>=0.14.14",
+]
